--- a/src/InfluxDB.Net/packages.config
+++ b/src/InfluxDB.Net/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
 <packages>
+  <package id="Newtonsoft.Json" version="6.0.5" targetFramework="net451" />
   <package id="RestSharp" version="104.4.0" targetFramework="net451" />
 </packages>
