--- a/src/InfluxDB.Net.Tests/packages.config
+++ b/src/InfluxDB.Net.Tests/packages.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
 <packages>
-  <package id="AutoFixture" version="3.20.0" targetFramework="net451" />
-  <package id="FluentAssertions" version="3.1.229" targetFramework="net451" />
-  <package id="Moq" version="4.2.1408.0717" targetFramework="net451" />
+  <package id="AutoFixture" version="3.20.2" targetFramework="net451" />
+  <package id="Docker.DotNet" version="1.0" targetFramework="net451" />
+  <package id="FluentAssertions" version="3.2.1" targetFramework="net451" />
+  <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net451" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net451" />
+  <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net451" />
+  <package id="Moq" version="4.2.1409.1722" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net451" />
   <package id="NUnit" version="2.6.3" targetFramework="net451" />
 </packages>
