--- a/src/InfluxDB.Net.Tests/InfluxDB.Net.Tests.csproj
+++ b/src/InfluxDB.Net.Tests/InfluxDB.Net.Tests.csproj
@@ -80,6 +80,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\InfluxDB.Net\InfluxDB.Net.csproj">
+      <Project>{9092CDD0-1585-48DE-B619-98F6FF01F8CC}</Project>
+      <Name>InfluxDB.Net</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
