--- a/src/InfluxDB.Net/InfluxDB.Net.csproj
+++ b/src/InfluxDB.Net/InfluxDB.Net.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Models\ShardSpace.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Stopwatch.cs" />
     <Compile Include="TimeUnit.cs" />
   </ItemGroup>
   <ItemGroup>
