--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,7 @@ dependencies:
     - wget http://s3.amazonaws.com/influxdb/influxdb_latest_i386.deb
     - sudo dpkg -i influxdb_latest_i386.deb
     - sudo /etc/init.d/influxdb start
-    - mono .nuget/NuGet.exe install NUnit.Runners -Version 2.6.4
+    - mono .nuget/NuGet.exe install NUnit.Runners
 
 test:
   override:
