--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,7 @@ dependencies:
     - wget http://s3.amazonaws.com/influxdb/influxdb_latest_i386.deb
     - sudo dpkg -i influxdb_latest_i386.deb
     - sudo /etc/init.d/influxdb start
-    - sudo mozroots --import --machine --sync yes | sudo certmgr -ssl -m https://go.microsoft.com yes | sudo certmgr -ssl -m https://nugetgallery.blob.core.windows.net yes | sudo certmgr -ssl -m https://nuget.org
+    - sudo mono -V
     - mono .nuget/NuGet.exe install NUnit.Runners
 
 test:
