Fix last commit

--- a/InfluxDB.Net/InfluxDB.Net.csproj
+++ b/InfluxDB.Net/InfluxDB.Net.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <!-- A reference to the entire .NET Framework is automatically included -->
     <None Include="app.config" />
+    <None Include="InfluxDB.Net.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
