--- a/InfluxDB.Net/packages.config
+++ b/InfluxDB.Net/packages.config
@@ -1,14 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
 <packages>
-  <package id="Microsoft.Bcl" version="1.1.9"
-           targetFramework="portable-net45+sl50+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
-  <package id="Microsoft.Bcl.Async" version="1.0.168"
-           targetFramework="portable-net45+sl50+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
-  <package id="Microsoft.Bcl.Build" version="1.0.14"
-           targetFramework="portable-net45+sl50+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
-  <package id="Microsoft.Net.Http" version="2.2.28"
-           targetFramework="portable-net45+sl50+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
-  <package id="Newtonsoft.Json" version="6.0.5"
-           targetFramework="portable-net45+sl50+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="portable-net45+win+wpa81+wp80" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="portable-net45+sl50+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10" requireReinstallation="True" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="portable-net45+sl50+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10" requireReinstallation="True" />
+  <package id="Microsoft.Bcl.Compression" version="3.9.85" targetFramework="portable-net45+win+wpa81+wp80" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="portable-net45+win+wpa81+wp80" />
+  <package id="Newtonsoft.Json" version="6.0.5" targetFramework="portable-net45+sl50+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10" requireReinstallation="True" />
 </packages>
