--- a/InfluxDB.Net.Tests/packages.config
+++ b/InfluxDB.Net.Tests/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
-  <package id="AutoFixture" version="3.20.2" targetFramework="net45" />
-  <package id="FluentAssertions" version="3.2.1" targetFramework="net45" />
-  <package id="Moq" version="4.2.1409.1722" targetFramework="net45" />
-  <package id="NUnit" version="2.6.4" targetFramework="net45" />
+  <package id="AutoFixture" version="3.30.6" targetFramework="net45" userInstalled="true" />
+  <package id="FluentAssertions" version="3.3.0" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" userInstalled="true" />
+  <package id="Moq" version="4.2.1502.911" targetFramework="net45" userInstalled="true" />
+  <package id="NUnit" version="2.6.4" targetFramework="net45" userInstalled="true" />
 </packages>
