--- a/InfluxDB.Net.Tests/InfluxDB.Net.Tests.csproj
+++ b/InfluxDB.Net.Tests/InfluxDB.Net.Tests.csproj
@@ -67,6 +67,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net" />
     <Reference Include="System.Xml.Linq" />
