--- a/circle.yml
+++ b/circle.yml
@@ -4,15 +4,15 @@ machine:
 
 dependencies:
   pre:
-    - wget https://s3.amazonaws.com/influxdb/influxdb_0.8.7_amd64.deb
-    - sudo dpkg -i influxdb_0.8.7_amd64.deb
+    - wget https://s3.amazonaws.com/influxdb/influxdb_0.9.2_amd64.deb
+    - sudo dpkg -i influxdb_0.9.2_amd64.deb
     - sudo /etc/init.d/influxdb start
     - sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
     - echo "deb http://download.mono-project.com/repo/debian wheezy main" | sudo tee /etc/apt/sources.list.d/mono-xamarin.list
     - sudo apt-get update
-    - sudo apt-get install  mono-devel
-    - sudo apt-get install  mono-complete
-    - sudo apt-get install  referenceassemblies-pcl
+    - sudo apt-get install --only-upgrade mono-devel
+    - sudo apt-get install --only-upgrade mono-complete
+    #- sudo apt-get install  referenceassemblies-pcl
     - mozroots --import --sync
     - mono .nuget/NuGet.exe restore InfluxDB.Net.sln
     - sudo chmod +x build.sh
