--- a/InfluxDB.Net.Tests/app.config
+++ b/InfluxDB.Net.Tests/app.config
@@ -4,7 +4,10 @@
 		<add key="url" value="http://localhost:8086"/>
 		<add key="username" value="root"/>
 		<add key="password" value="root"/>
-	</appSettings>
+    <add key="urlV8" value="http://localhost:8086"/>
+    <add key="usernameV8" value="root"/>
+    <add key="passwordV8" value="root"/>
+  </appSettings>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
