Created an auto client, that detects the version and runs the correct implementation.

--- a/InfluxDB.Net/InfluxDB.Net.csproj
+++ b/InfluxDB.Net/InfluxDB.Net.csproj
@@ -49,6 +49,7 @@
     <Compile Include="IInfluxDb.cs" />
     <Compile Include="IInfluxDbClient.cs" />
     <Compile Include="InfluxDbClient.cs" />
+    <Compile Include="InfluxDbClientAuto.cs" />
     <Compile Include="InfluxDbClientConfiguration.cs" />
     <Compile Include="InfluxDbClientV08.cs" />
     <Compile Include="InfluxDbException.cs" />
