Handle several 0.9.x versions.
Version 0.9.2 stopped working when support for version 0.9.3 was implemented.

--- a/InfluxDB.Net.Tests/app.config
+++ b/InfluxDB.Net.Tests/app.config
@@ -4,6 +4,7 @@
 		<add key="url" value="http://localhost:8086" />
 		<add key="username" value="root" />
 		<add key="password" value="root" />
+    <add key="version" value="Auto" />
 	</appSettings>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
