Made the powershell project work.

--- a/InfluxDB.Net.Tests/app.config
+++ b/InfluxDB.Net.Tests/app.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="url" value="http://192.168.1.140:8086" />
+    <add key="url" value="http://...:8086" />
     <add key="username" value="root" />
     <add key="password" value="root" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
