--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ TestResults
 # Build results
 [Dd]ebug/
 [Rr]elease/
+[Bb]uild/
 x64/
 *_i.c
 *_p.c
@@ -101,6 +102,8 @@ Generated_Code #added for RIA/Silverlight projects
 _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
-/src/_NCrunch_FunnyBus/
+_NCrunch*/
+
+*/TestModule/Modules/*
 
 *.orig
