create explicit version 1.1.x support

--- a/InfluxDB.Net/InfluxDB.Net.csproj
+++ b/InfluxDB.Net/InfluxDB.Net.csproj
@@ -53,15 +53,18 @@
     <Compile Include="Client\InfluxDbClientV092.cs" />
     <Compile Include="Client\InfluxDbClientV095.cs" />
     <Compile Include="Client\InfluxDbClientV096.cs" />
+    <Compile Include="Client\InfluxDbClientV1_1_x.cs" />
     <Compile Include="Constants\QueryStatements.cs" />
     <Compile Include="Constants\QueryParams.cs" />
     <Compile Include="Infrastructure\Formatters\FormatterV010x.cs" />
     <Compile Include="Infrastructure\Formatters\FormatterV011x.cs" />
     <Compile Include="Infrastructure\Formatters\FormatterV012x.cs" />
+    <Compile Include="Infrastructure\Formatters\FormatterV013x.cs" />
     <Compile Include="Infrastructure\Formatters\FormatterV0x.cs" />
     <Compile Include="Infrastructure\Formatters\FormatterV092.cs" />
     <Compile Include="Infrastructure\Formatters\FormatterV095.cs" />
     <Compile Include="Infrastructure\Formatters\FormatterV096.cs" />
+    <Compile Include="Infrastructure\Formatters\FormatterV1_1_x.cs" />
     <Compile Include="Infrastructure\Validation\Validate.cs" />
     <Compile Include="Infrastructure\Configuration\DatabaseConfiguration.cs" />
     <Compile Include="Contracts\IInfluxDb.cs" />
