--- a/InfluxDB.Net/InfluxDB.Net.nuspec
+++ b/InfluxDB.Net/InfluxDB.Net.nuspec
@@ -15,6 +15,7 @@
     </description>
     <summary>Portable .NET client for InfluxDB.</summary>
     <copyright />
+    <releaseNotes>Added explicit support for version 1.1.x.</releaseNotes>
     <dependencies>
       <dependency id="Microsoft.Bcl.Async" version="1.0.168" />
       <dependency id="Newtonsoft.Json" version="6.0.5" />
