Moved code to respective ~/src and ~/test folders - In preparation for the new dotnet core structure

--- a/test/InfluxDB.Net.Tests/InfluxDB.Net.Tests.csproj
+++ b/test/InfluxDB.Net.Tests/InfluxDB.Net.Tests.csproj
@@ -92,7 +92,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\InfluxDB.Net\InfluxDB.Net.csproj">
+    <ProjectReference Include="..\..\src\InfluxDB.Net\InfluxDB.Net.csproj">
       <Project>{9092CDD0-1585-48DE-B619-98F6FF01F8CC}</Project>
       <Name>InfluxDB.Net</Name>
     </ProjectReference>
